--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/app.css" media="screen" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -31,7 +32,7 @@
         <section id="main_content">
           <h1>
 <a name="elm-hull" class="anchor" href="#elm-hull"><span class="octicon octicon-link"></span></a>elm-hull</h1>
-<div id="hull"></div>
+<div class="app" id="hull"></div>
 <p>Click to add points to the current polygon.  Click near the initial point to finalize the polygon and compute its convex hull (drawn in red).</p>
 
         </section>
