formatting and interface
add javascript changes generated from
commit 2287106782bf31e25e4170143ac7fd40491fd034 on master branch

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
           <h1>
 <a name="elm-hull" class="anchor" href="#elm-hull"><span class="octicon octicon-link"></span></a>elm-hull</h1>
 <div class="app" id="hull"></div>
-<p>Click to add points to the current polygon.  Click near the initial point to finalize the polygon and compute its convex hull (drawn in red).</p>
+<p>
+  Click to add points to the current polygon.
+  Click the initial point to finalize the polygon and compute its
+  convex hull (drawn in red).
+</p>
 
         </section>
 
